...
    <string name="createAccount">Créer un compte</string>
    <string name="title_activity_program">"Programmes"</string>
    <string name="title_activity_statistics">"Statistiques"</string>
    <string name="title_activity_messaging">"Messagerie"</string>
    <string name="action_settings">"Paramètres"</string>
    <string name="action_history">"Historique"</string>
    <string name="action_logout">"Déconnexion"</string>
    <string name="action_create">"Créer le compte"</string>

    <string name="language_setting">Option de langue</string>
    <string name="application_settings">Options de l\'application</string>
    <string name="language">Langue</string>
    <string name="audio_setting">Désactiver l\'audio</string>
...

    <string name="message_hint">Écrire votre message</string>
    <string name="send">Envoyer</string>
    <string name="title_program_list">Exercices</string>
    <string name="title_program_detail">Information sur l\'exercice</string>
    <string name="title_history_list">Historique</string>
    <string name="play_button">Play Button</string>
    <string name="instructions">Placez votre appareil debout de façon à ce que la caméra puisse voir votre corps au complet. Mettez vous devant l\'appareil et restez immobile. L\'exercice commencera ensuite.</string>
    <string name="repetition_number">Nombre de répétitions</string>
    <string name="exercise_type">Type d\'exercice</string>
    <string name="exercise_time">Durée de l\'exercice</string>
    <string name="hold_stats">Type Maintenir</string>
    <string name="repetition_stats">Type Répétition</string>
...
