...
            android:autoSizeTextType="uniform"
            android:fontFamily="sans-serif-light"
            android:gravity="center_vertical"
            android:maxLines="1" />

        <ImageButton
            android:id="@+id/playButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="@drawable/roud_playbutton"
            android:backgroundTint="@android:color/holo_green_light"
            android:contentDescription="@string/play_button"
...
